<style>: fix edit post modal height overflowing

--- a/src/assets/style/edit_post.css
+++ b/src/assets/style/edit_post.css
@@ -4,12 +4,12 @@
 
 .modal.edit_post {
     width: 50%;
-    height: 60%;
     padding: var(--default-padding);
 }
 
 .modal.edit_post,
 .form-main {
+    height: fit-content;
     gap: 1rem;
 }
 
@@ -26,7 +26,7 @@
 
 #post_img {
     width: 60%;
-    height: 100%;
+    max-height: 450px;
     object-fit: cover;
 }
 
