--- a/src/assets/style/utils.css
+++ b/src/assets/style/utils.css
@@ -71,3 +71,8 @@
     font-size: 2rem;
     margin-bottom: 10px;
 }
+
+.result,
+.result-box {
+    display: none;
+}
